# InkBall

./: .gitignore  .gitmodules  Ball.cpp  Ball.h  Block.cpp  Block.h  CMakeLists.txt  Drawing.cpp  Drawing.h  Game.cpp  Game.h  InkTrail.cpp  InkTrail.h  LICENSE  Level.cpp  Level.h  README.md  SDLError.h  SDLRendererDeleter.cpp  SDLRendererDeleter.h  SDLTextureDeleter.cpp  SDLTextureDeleter.h  SDLWindowDeleter.cpp  SDLWindowDeleter.h  Vector2.h  dependencies.md  main.cpp
assets/: README
cmake/: FindSDL2_image.cmake
dev_assets/: ball_colours.txt  block.pdn  blue_pocket.pdn  grey_pocket.pdn  orange_pocket.pdn  pink_pocket.pdn  sparkle.pdn
levels/: Level 1.ikl  Level 2.ikl  Level 3.ikl  Level 4.ikl  Level 5.ikl
src/: Ball.cpp  Ball.h  Block.cpp  Block.h  BoxCollidable.h  Collidable.h  Color.h  Drawing.cpp  Drawing.h  EscapeMenu.cpp  EscapeMenu.h  Game.cpp  Game.h  GameOverLevel.cpp  GameOverLevel.h  InkTrail.cpp  InkTrail.h  Level.cpp  Level.h  LevelDeserialization.cpp  LevelDeserialization.h  LevelSelectMenu.cpp  LevelSelectMenu.h  LevelSerialization.h  Line.h  MenuItem.h  MenuLevel.cpp  MenuLevel.h  PlayableLevel.cpp  PlayableLevel.h  Pocket.cpp  Pocket.h  Renderable.h  SDLError.h  SDLRendererDeleter.cpp  SDLRendererDeleter.h  SDLTextureDeleter.cpp  SDLTextureDeleter.h  SDLWindowDeleter.cpp  SDLWindowDeleter.h  (+8 more)
